# VRI-stereo-vo

./: .gitignore  README.md  attach.sh  build.sh  connect_container.sh  docker-compose.yaml  run_container.sh  run_kitti_bags.sh
config/: config.yaml  config_euroc.yaml  config_imx.yaml  config_ufpr_map.yaml  euroc.yaml  euroc_0_intrinsics.yaml  euroc_1_intrinsics.yaml  imx.yaml  imx_right_intrinsics.yaml  kinetic_intrinsics.yaml  kitti.yaml  ufpr_map.yaml
config/intrinsics/: euroc_0_intrinsics.yaml  euroc_1_intrinsics.yaml  imx_left_intrinsics.yaml  kinetic_intrinsics.yaml  kitti_left_intrinsics.yaml  kitti_right_intrinsics.yaml
config_new/: config.yaml  euroc.yaml  imx.yaml  ufpr_map.yaml
src/drivers/: CMakeLists.txt
src/drivers/launch/: drivers_launch.py
src/drivers/scripts/: bno_publisher.py
src/drivers/src/: camera_publisher.cpp
src/stereo_vo/: CMakeLists.txt  package.xml
src/stereo_vo/include/: depth_estimator.hpp  feature_matcher.hpp  opencv_conversions.hpp
src/stereo_vo/launch/: vio.launch.py  vo.launch.py
src/stereo_vo/msg/: StereoImage.msg
src/stereo_vo/scripts/: visualization_node.py
src/stereo_vo/src/: depth_estimator_node.cpp  depth_estimator_server.cpp  feature_extractor_server.cpp  feature_matcher_server.cpp  stereo_vo_node.cpp  visualization_node.cpp
src/stereo_vo/srv/: DepthEstimator.srv
src/vio_msgs/: CMakeLists.txt  package.xml
src/vio_msgs/msg/: DMatches.msg  KeyPoints.msg  StereoImage.msg
src/vio_msgs/srv/: DepthEstimator.srv  FeatureExtractor.srv  FeatureMatcher.srv
system_install/: Dockerfile.desktop  Dockerfile.nano  install.sh  ros_entrypoint.sh
