cmake_minimum_required(VERSION 3.8)
project(vio_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rosidl_default_generators REQUIRED)

find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(vision_msgs REQUIRED)

find_package(rosidl_default_generators REQUIRED)
rosidl_generate_interfaces(${PROJECT_NAME}
  # Build services
  "srv/DepthEstimator.srv"
  "srv/FeatureExtractor.srv"
  "srv/FeatureMatcher.srv"

  # Build messages
  "msg/StereoImage.msg"
  DEPENDENCIES sensor_msgs std_msgs vision_msgs
)

ament_package()